# kilke-python-boilerplate

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
data/: pump_rpm.json
src/: api.py  config.py  get_pump_state.py  get_reactor_state.py  get_sensor_state.py  handle_pump_configuration.py  index.py  initialize_pumps.py  persisted_run_pump.py  pump_configuration.py  read_sensors.py  run_pump.py  update_pump_config.py  update_system_config.py
